rust/crates/dsl-core/tests/snapshots/dag_golden__dag_changeset_compose_validate_publish.snap
---
source: crates/dsl-core/tests/dag_golden.rs
assertion_line: 69
expression: compiled
---
CompiledSteps {
    steps: [
        CompileStep {
            verb_call: VerbCall {
                domain: "changeset",
                verb: "compose",
                arguments: [
                    Argument {
                        key: "title",
                        value: Literal(
                            String(
                                "Add passport attribute",
                            ),
                            Span {
                                start: 35,
                                end: 59,
                            },
                        ),
                        span: Span {
                            start: 28,
                            end: 59,
                        },
                    },
                ],
                binding: Some(
                    "cs",
                ),
                span: Span {
                    start: 9,
                    end: 68,
                },
            },
            source_stmt: 0,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "changeset",
                verb: "validate",
                arguments: [
                    Argument {
                        key: "changeset-id",
                        value: SymbolRef {
                            name: "cs",
                            span: Span {
                                start: 111,
                                end: 114,
                            },
                        },
                        span: Span {
                            start: 97,
                            end: 114,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 77,
                    end: 115,
                },
            },
            source_stmt: 1,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "governance",
                verb: "publish",
                arguments: [
                    Argument {
                        key: "changeset-id",
                        value: SymbolRef {
                            name: "cs",
                            span: Span {
                                start: 158,
                                end: 161,
                            },
                        },
                        span: Span {
                            start: 144,
                            end: 161,
                        },
                    },
                    Argument {
                        key: "dry-run",
                        value: Literal(
                            Boolean(
                                false,
                            ),
                            Span {
                                start: 171,
                                end: 176,
                            },
                        ),
                        span: Span {
                            start: 162,
                            end: 176,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 124,
                    end: 177,
                },
            },
            source_stmt: 2,
        },
    ],
    errors: [],
}
