rust/crates/dsl-core/tests/snapshots/dag_golden__dag_create_cbu_then_load.snap
---
source: crates/dsl-core/tests/dag_golden.rs
assertion_line: 38
expression: compiled
---
CompiledSteps {
    steps: [
        CompileStep {
            verb_call: VerbCall {
                domain: "cbu",
                verb: "create",
                arguments: [
                    Argument {
                        key: "name",
                        value: Literal(
                            String(
                                "Allianz GI",
                            ),
                            Span {
                                start: 27,
                                end: 39,
                            },
                        ),
                        span: Span {
                            start: 21,
                            end: 39,
                        },
                    },
                    Argument {
                        key: "jurisdiction",
                        value: Literal(
                            String(
                                "LU",
                            ),
                            Span {
                                start: 54,
                                end: 58,
                            },
                        ),
                        span: Span {
                            start: 40,
                            end: 58,
                        },
                    },
                ],
                binding: Some(
                    "cbu",
                ),
                span: Span {
                    start: 9,
                    end: 68,
                },
            },
            source_stmt: 0,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "session",
                verb: "load-cbu",
                arguments: [
                    Argument {
                        key: "name",
                        value: Literal(
                            String(
                                "Allianz GI",
                            ),
                            Span {
                                start: 101,
                                end: 113,
                            },
                        ),
                        span: Span {
                            start: 95,
                            end: 113,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 77,
                    end: 114,
                },
            },
            source_stmt: 1,
        },
    ],
    errors: [],
}
