rust/crates/dsl-core/tests/snapshots/dag_golden__dag_deal_and_kyc_parallel.snap
---
source: crates/dsl-core/tests/dag_golden.rs
assertion_line: 161
expression: compiled
---
CompiledSteps {
    steps: [
        CompileStep {
            verb_call: VerbCall {
                domain: "deal",
                verb: "create",
                arguments: [
                    Argument {
                        key: "client-name",
                        value: Literal(
                            String(
                                "Invesco Ltd",
                            ),
                            Span {
                                start: 35,
                                end: 48,
                            },
                        ),
                        span: Span {
                            start: 22,
                            end: 48,
                        },
                    },
                    Argument {
                        key: "product",
                        value: Literal(
                            String(
                                "fund-admin",
                            ),
                            Span {
                                start: 58,
                                end: 70,
                            },
                        ),
                        span: Span {
                            start: 49,
                            end: 70,
                        },
                    },
                ],
                binding: Some(
                    "deal",
                ),
                span: Span {
                    start: 9,
                    end: 81,
                },
            },
            source_stmt: 0,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "kyc-case",
                verb: "create",
                arguments: [
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 115,
                                end: 119,
                            },
                        },
                        span: Span {
                            start: 107,
                            end: 119,
                        },
                    },
                    Argument {
                        key: "case-type",
                        value: Literal(
                            String(
                                "standard",
                            ),
                            Span {
                                start: 131,
                                end: 141,
                            },
                        ),
                        span: Span {
                            start: 120,
                            end: 141,
                        },
                    },
                ],
                binding: Some(
                    "case",
                ),
                span: Span {
                    start: 90,
                    end: 152,
                },
            },
            source_stmt: 1,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "deal",
                verb: "link-cbu",
                arguments: [
                    Argument {
                        key: "deal-id",
                        value: SymbolRef {
                            name: "deal",
                            span: Span {
                                start: 185,
                                end: 190,
                            },
                        },
                        span: Span {
                            start: 176,
                            end: 190,
                        },
                    },
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 199,
                                end: 203,
                            },
                        },
                        span: Span {
                            start: 191,
                            end: 203,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 161,
                    end: 204,
                },
            },
            source_stmt: 2,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "kyc-case",
                verb: "advance",
                arguments: [
                    Argument {
                        key: "case-id",
                        value: SymbolRef {
                            name: "case",
                            span: Span {
                                start: 240,
                                end: 245,
                            },
                        },
                        span: Span {
                            start: 231,
                            end: 245,
                        },
                    },
                    Argument {
                        key: "to-stage",
                        value: Literal(
                            String(
                                "approval",
                            ),
                            Span {
                                start: 256,
                                end: 266,
                            },
                        ),
                        span: Span {
                            start: 246,
                            end: 266,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 213,
                    end: 267,
                },
            },
            source_stmt: 3,
        },
    ],
    errors: [],
}
