rust/crates/dsl-core/tests/snapshots/dag_golden__dag_entity_then_screening_then_case.snap
---
source: crates/dsl-core/tests/dag_golden.rs
assertion_line: 188
expression: compiled
---
CompiledSteps {
    steps: [
        CompileStep {
            verb_call: VerbCall {
                domain: "entity",
                verb: "create-proper-person",
                arguments: [
                    Argument {
                        key: "first-name",
                        value: Literal(
                            String(
                                "Hans",
                            ),
                            Span {
                                start: 50,
                                end: 56,
                            },
                        ),
                        span: Span {
                            start: 38,
                            end: 56,
                        },
                    },
                    Argument {
                        key: "last-name",
                        value: Literal(
                            String(
                                "Müller",
                            ),
                            Span {
                                start: 68,
                                end: 77,
                            },
                        ),
                        span: Span {
                            start: 57,
                            end: 77,
                        },
                    },
                ],
                binding: Some(
                    "director",
                ),
                span: Span {
                    start: 9,
                    end: 92,
                },
            },
            source_stmt: 0,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "screening",
                verb: "pep",
                arguments: [
                    Argument {
                        key: "entity-id",
                        value: SymbolRef {
                            name: "director",
                            span: Span {
                                start: 127,
                                end: 136,
                            },
                        },
                        span: Span {
                            start: 116,
                            end: 136,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 101,
                    end: 137,
                },
            },
            source_stmt: 1,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "screening",
                verb: "adverse-media",
                arguments: [
                    Argument {
                        key: "entity-id",
                        value: SymbolRef {
                            name: "director",
                            span: Span {
                                start: 182,
                                end: 191,
                            },
                        },
                        span: Span {
                            start: 171,
                            end: 191,
                        },
                    },
                    Argument {
                        key: "depth",
                        value: Literal(
                            String(
                                "full",
                            ),
                            Span {
                                start: 199,
                                end: 205,
                            },
                        ),
                        span: Span {
                            start: 192,
                            end: 205,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 146,
                    end: 206,
                },
            },
            source_stmt: 2,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "kyc-case",
                verb: "create",
                arguments: [
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 240,
                                end: 244,
                            },
                        },
                        span: Span {
                            start: 232,
                            end: 244,
                        },
                    },
                    Argument {
                        key: "case-type",
                        value: Literal(
                            String(
                                "standard",
                            ),
                            Span {
                                start: 256,
                                end: 266,
                            },
                        ),
                        span: Span {
                            start: 245,
                            end: 266,
                        },
                    },
                ],
                binding: Some(
                    "case",
                ),
                span: Span {
                    start: 215,
                    end: 277,
                },
            },
            source_stmt: 3,
        },
    ],
    errors: [],
}
